--- a/client/styles/partials/_timeline.sass
+++ b/client/styles/partials/_timeline.sass
@@ -15,12 +15,12 @@
 		font-size: $baseFontSize
 
 	&:nth-child(odd)
-		color: $timelineOdd
+		color: $sliderOdd
 		border-top: 0.5rem solid currentColor
 	&:nth-child(even)
-		color: $timelineEven
+		color: $sliderEven
 		border-top: 0.5rem solid currentColor
 
 	&.timeline__year--highlighted
-		color: $timelineHighlighted
+		color: $sliderHighlighted
 		border-top: 0.5rem solid currentColor
